@@ -27,7 +27,6 @@ import java.io.IOException;
 import java.time.LocalDate;
 import java.time.LocalTime;
 import java.time.ZonedDateTime;
-import java.time.temporal.ChronoUnit;
 import java.util.*;
 import java.util.concurrent.atomic.AtomicLong;
 import java.util.function.*;
@@ -566,12 +565,12 @@ class ConferenceDataLoaderExecutorTest {
 
                                     if ((localeItems != null) && !localeItems.isEmpty()) {
                                         if (Language.ENGLISH.equals(language)) {
-                                            return localeItems.get(0).getText();
+                                            return localeItems.getFirst().getText();
                                         } else if (Language.RUSSIAN.equals(language)) {
                                             if (localeItems.size() > 1) {
                                                 return localeItems.get(1).getText();
                                             } else {
-                                                return localeItems.get(0).getText();
+                                                return localeItems.getFirst().getText();
                                             }
                                         } else {
                                             return null;
@@ -1907,7 +1906,7 @@ class ConferenceDataLoaderExecutorTest {
 
         private Stream<Arguments> data() {
             final ZonedDateTime now = ZonedDateTime.now();
-            final ZonedDateTime yesterday = now.minus(1, ChronoUnit.DAYS);
+            final ZonedDateTime yesterday = now.minusDays(1);
 
             return Stream.of(
                     arguments(createSpeaker(null), createSpeaker(null), null),
@@ -2970,7 +2969,7 @@ class ConferenceDataLoaderExecutorTest {
                                     Object[] args = invocation.getArguments();
                                     List<LocaleItem> localeItems = (List<LocaleItem>) args[0];
 
-                                    return ((localeItems != null) && !localeItems.isEmpty()) ? localeItems.get(0).getText() : null;
+                                    return ((localeItems != null) && !localeItems.isEmpty()) ? localeItems.getFirst().getText() : null;
                                 }
                         );
 
@@ -3113,7 +3112,7 @@ class ConferenceDataLoaderExecutorTest {
                                     Object[] args = invocation.getArguments();
                                     List<LocaleItem> localeItems = (List<LocaleItem>) args[0];
 
-                                    return ((localeItems != null) && !localeItems.isEmpty()) ? localeItems.get(0).getText() : null;
+                                    return ((localeItems != null) && !localeItems.isEmpty()) ? localeItems.getFirst().getText() : null;
                                 }
                         );
 
@@ -3177,7 +3176,7 @@ class ConferenceDataLoaderExecutorTest {
                                     Object[] args = invocation.getArguments();
                                     List<LocaleItem> localeItems = (List<LocaleItem>) args[0];
 
-                                    return ((localeItems != null) && !localeItems.isEmpty()) ? localeItems.get(0).getText() : null;
+                                    return ((localeItems != null) && !localeItems.isEmpty()) ? localeItems.getFirst().getText() : null;
                                 }
                         );
 
@@ -3231,7 +3230,7 @@ class ConferenceDataLoaderExecutorTest {
                                     Object[] args = invocation.getArguments();
                                     List<LocaleItem> localeItems = (List<LocaleItem>) args[0];
 
-                                    return ((localeItems != null) && !localeItems.isEmpty()) ? localeItems.get(0).getText() : null;
+                                    return ((localeItems != null) && !localeItems.isEmpty()) ? localeItems.getFirst().getText() : null;
                                 }
                         );
 
@@ -4178,7 +4177,7 @@ class ConferenceDataLoaderExecutorTest {
             Speaker speaker3 = new Speaker();
             speaker3.setId(0);
             speaker3.setPhotoFileName("photoFileName0");
-            speaker3.setPhotoUpdatedAt(now.plus(1, ChronoUnit.DAYS));
+            speaker3.setPhotoUpdatedAt(now.plusDays(1));
 
             Speaker speaker4 = new Speaker();
             speaker4.setId(0);
@@ -4578,7 +4577,7 @@ class ConferenceDataLoaderExecutorTest {
     class NeedPhotoUpdateTest {
         private Stream<Arguments> data() {
             final ZonedDateTime now = ZonedDateTime.now();
-            final ZonedDateTime yesterday = now.minus(1, ChronoUnit.DAYS);
+            final ZonedDateTime yesterday = now.minusDays(1);
             final String validUrl = "https://valid.com";
             final String photoFileName = "00000.jpg";
             final String imageParametersTemplate = "w=%d&h=%d";
@@ -4651,7 +4650,7 @@ class ConferenceDataLoaderExecutorTest {
 
         assertEquals(EN_TEXT, LocalizationUtils.getString(actual.getName(), Language.ENGLISH));
         assertEquals(RU_TEXT, LocalizationUtils.getString(actual.getName(), Language.RUSSIAN));
-        assertEquals(PLACE_ID, actual.getDays().get(0).getPlace().getId());
+        assertEquals(PLACE_ID, actual.getDays().getFirst().getPlace().getId());
     }
 
     @Test
